Fixing ExchangeRateHistory.java method